--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -8,7 +8,7 @@
 [MAIN]
 
 # Files or directories to be skipped. They should be base names, not paths.
-ignore=third_party
+ignore=third_party, migrations, apps.py, manage.py
 
 # Files or directories matching the regex patterns are skipped. The regex
 # matches against base names, not paths.
@@ -238,7 +238,7 @@ generated-members=
 [FORMAT]
 
 # Maximum number of characters on a single line.
-max-line-length=80
+max-line-length=100
 
 # TODO(https://github.com/pylint-dev/pylint/issues/3352): Direct pylint to exempt
 # lines made too long by directives to pytype.
