--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ django-cors-headers==4.3.1
 django-netfields==1.3.2
 djangorestframework==3.15.1
 docutils==0.18.1
+drf-nested-routers==0.94.1
 drf-spectacular==0.27.2
 idna==3.7
 imagesize==1.4.1
