--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ Django==5.0.6
 django-cors-headers==4.3.1
 django-netfields==1.3.2
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
 docutils==0.18.1
 drf-nested-routers==0.94.1
 drf-spectacular==0.27.2
@@ -32,6 +33,7 @@ platformdirs==4.2.2
 psycopg==3.1.19
 psycopg-binary==3.1.19
 Pygments==2.18.0
+PyJWT==2.8.0
 pylint==3.2.5
 PyYAML==6.0.1
 referencing==0.35.1
