add cytoscape library

--- a/frontend/cyto-map/angular.json
+++ b/frontend/cyto-map/angular.json
@@ -36,7 +36,9 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/cytoscape/dist/cytoscape.min.js"
+            ]
           },
           "configurations": {
             "production": {
