--- a/frontend/cyto-map/package.json
+++ b/frontend/cyto-map/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "bootstrap": "^5.3.3",
+    "cytoscape": "^3.30.2",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
